# anime-watcher

./: .gitignore  LICENSE  README.md  colors.py  config.py  data_parser.py  dependrancy.bat  main.py  parser.py  pyproject.toml  setup.py  user_interface.py  web_requests.py
src/anime_watcher_fr/: cli.py  config.py  data_parser.py
