[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/anime_watcher_fr"]
[project]
name = "anime_watcher_fr"
version = "1.0.1"
dependencies = [
    "requests",
    "pyjsparser",
    "beautifulsoup4"
]
requires-python = ">=3.10"
authors = [
  {name = "Petitnarval", email = "coincoin816@gmail.com"},
  {name = "Draymone", email = "draymonepro@gmail.com"}
]
maintainers = [
    {name = "Petitnarval", email = "coincoin816@gmail.com"},
    {name = "Draymone", email = "draymonepro@gmail.com"}
]
description = "Watch animes in your bash in french, Absolute foshu !"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["anime", "french", "video", "terminal"]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
anime-watcher = "anime_watcher_fr.cli:main"

[project.urls]
Repository = "https://github.com/petitnarval/anime-watcher.git"
"Bug Tracker" = "https://github.com/petitnarval/anime-watcher/issues"